WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139174
[Mac, iOS] Crash log application information contains latest main frame URL instead of test URL
https://bugs.webkit.org/show_bug.cgi?id=139174
Summary
[Mac, iOS] Crash log application information contains latest main frame URL i...
Alexey Proskuryakov
Reported
2014-12-01 23:33:48 PST
We set CrashReporter information on each main frame navigation. This means that tests that perform a navigation and then crash end up having a post-navigation URL in the report, which is often not unique, and thus hard to map back to the actual crashing test.
Attachments
proposed fix
(16.76 KB, patch)
2014-12-02 00:02 PST
,
Alexey Proskuryakov
simon.fraser
: review+
Details
Formatted Diff
Diff
with Windows fixes
(22.49 KB, patch)
2014-12-02 10:09 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-12-02 00:02:40 PST
Created
attachment 242390
[details]
proposed fix
WebKit Commit Bot
Comment 2
2014-12-02 00:05:07 PST
Attachment 242390
[details]
did not pass style-queue: ERROR: Tools/DumpRenderTree/mac/DumpRenderTree.mm:62: Alphabetical sorting problem. [build/include_order] [4] ERROR: Tools/DumpRenderTree/mac/DumpRenderTree.mm:1790: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2014-12-02 08:54:33 PST
Comment on
attachment 242390
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=242390&action=review
> Tools/ChangeLog:19 > + reporter informaiton here.
informaiton
Alexey Proskuryakov
Comment 4
2014-12-02 10:09:27 PST
Created
attachment 242423
[details]
with Windows fixes Turns out that Windows DumpRenderTree actually still used paths in pathOrURL. This inconsistency seems easy to fix, let's see what EWS thinks.
WebKit Commit Bot
Comment 5
2014-12-02 11:30:33 PST
Comment on
attachment 242423
[details]
with Windows fixes Clearing flags on attachment: 242423 Committed
r176677
: <
http://trac.webkit.org/changeset/176677
>
WebKit Commit Bot
Comment 6
2014-12-02 11:30:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug